# moonshots

./: .env.example  .gitignore  .pre-commit-config.yaml  docker-compose.yml  pyproject.toml  reptile-sinewaves-demo.py  toxicity_verifiers.ipynb  train_hyper_reptile.py  train_mixed_batching.py  utils.py
config/: hyper_reptile.yaml  mixed_batching.yaml
hyper_reptile/: reptile-sinewaves-demo.py
kernels/: Triton_Puzzles.ipynb  triton_kernels.ipynb
learning/kernels/: Triton_Puzzles.ipynb
mixed_batching/: train.py
rl/: bandit.py
toxicity_verifiers/: benchmark.py  lm_utils.py  toxicity_verifiers_v1.ipynb  toxicity_verifiers_v2.ipynb
